# git-stage-batch

./: .gitignore  404.html  ARCHITECTURE.md  BATCHES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STORAGE.md  git-stage-batch.1.in  index.html  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml  sitemap.xml
po/: LINGUAS  POTFILES.in  ar.po  cs.po  de.po  es.po  fr.po  git-stage-batch.pot  hi.po  it.po  ja.po  ko.po  meson.build  nl.po  pl.po  pt_BR.po  ru.po  tr.po  uk.po  zh_CN.po
src/git_stage_batch/: __init__.py  _version.py.in  batch.py  cli.py  commands.py  display.py  editor.py  exceptions.py  git_paths.py  hashing.py  i18n.py  line_selection.py  meson.build  models.py  parser.py  runtime.py  state.py  tui.py  tui_display.py  tui_prompts.py
src/git_stage_batch/batch/: __init__.py  absence_constraints.py  absence_content.py  atomic_file_changes.py  attribution.py  attribution_fingerprints.py  attribution_projection.py  attribution_units.py  baseline_correspondence.py  baseline_edits.py  baseline_reference_positions.py  baseline_replacement_choices.py  binary_file_content.py  binary_file_storage.py  comparison.py  content_commits.py  discard.py  discard_reversal.py  display.py  file_display.py  file_display_model.py  file_entry_storage.py  file_mergeability.py  file_mode_storage.py  gitlink_storage.py  hunk_line_ranges.py  hunk_ownership_translation.py  hunk_replacement_translation.py  lifecycle.py  line_mapping.py  line_range_view.py  line_sequence_equality.py  line_sequence_search.py  lineage.py  mask.py  match.py  match_storage.py  merge.py  merge_candidate_enumeration.py  merge_candidates.py  (+57 more)
src/git_stage_batch/batch/line_matching/: __init__.py  comparison.py  lineage.py  match.py  match_workspace.py  sequence_search.py
src/git_stage_batch/batch/merge/: __init__.py  absence_constraints.py  baseline_correspondence.py  baseline_edits.py  baseline_reference_positions.py  (+9 more)
src/git_stage_batch/cli/: __init__.py  apply_dispatch.py  argument_parser.py  asset_subcommands.py  auto_advance_options.py  batch_subcommands.py  completion.py  discard_dispatch.py  dispatch.py  execution.py  file_arguments.py  file_blocking_subcommands.py  file_scope.py  fixup_subcommands.py  git_help.py  include_dispatch.py  journal_subcommands.py  main.py  mode_dispatch.py  pager.py  quick_actions.py  replacement_input.py  reset_dispatch.py  root_parser.py  selection_subcommands.py  session_subcommands.py  show_dispatch.py  skip_dispatch.py  subcommand_parser.py  subcommand_registry.py  tui_subcommands.py
src/git_stage_batch/commands/: __init__.py  abort.py  again.py  annotate.py  apply_from.py  block_file.py  check_unstaged.py  discard.py  discard_from.py  drop.py  include.py  include_from.py  index_cleanup.py  install_assets.py  interactive.py  journal.py  list.py  new.py  redo.py  reset.py  show.py  show_from.py  sift.py  skip.py  start.py  status.py  stop.py  suggest_fixup.py  unblock_file.py  undo.py  validate.py
src/git_stage_batch/core/: actionable_changes.py  binary_diff.py  buffer.py  diff_headers.py  diff_parser.py  empty_file_diff.py  file_metadata_diff.py  gitlink_diff.py  hashing.py  hunk_headers.py  line_change_body.py  line_identity.py  line_selection.py  models.py  patch_headers.py  replacement.py  text_lifecycle.py
src/git_stage_batch/data/: __init__.py  asset_catalog.py  asset_install_plan.py  asset_installation.py  asset_inventory.py  asset_selection.py  auto_advance.py  batch_file_review_selection.py  batch_file_scope.py  batch_hunk_display.py  batch_refs.py  batch_selected_changes.py  batch_sources.py  binary_identity.py  change_freshness.py  consumed_replacement_masks.py  consumed_selections.py  file_change_display.py  file_change_status.py  file_hunk_display.py  file_modes.py  file_review_state.py  file_target_identity.py  file_tracking.py  hunk_tracking.py  ignore_files.py  index_entries.py  line_id_files.py  line_state.py  live_change_candidates.py  live_change_jobs.py  live_diff.py  progress.py  recovery_anchors.py  remaining_hunks.py  repository_buffers.py  session.py  session_ownership.py  staged_renames.py  start_time_changes.py  (+8 more)
src/git_stage_batch/editor/: __init__.py  buffer.py  edit.py  git.py  line_editor.py  line_endings.py  line_export.py  piece_table.py
src/git_stage_batch/output/: __init__.py  candidate_preview.py  candidate_preview_commands.py  candidate_preview_diff.py  candidate_preview_porcelain.py  candidate_preview_snippets.py  candidate_preview_summary.py  colors.py  file_review.py  file_review_action_selections.py  file_review_change_segments.py  file_review_changes.py  file_review_display_ids.py  file_review_footer.py  file_review_footer_hints.py  file_review_layout.py  file_review_list.py  file_review_model.py  file_review_model_builder.py  file_review_model_selections.py  file_review_pages.py  file_review_pagination.py  file_review_rows.py  file_review_state_builder.py  file_review_summary.py  hunk.py  install_assets.py  patch.py  status.py  status_prompt.py
src/git_stage_batch/staging/: __init__.py  content_buffers.py  index_update.py  operations.py
src/git_stage_batch/tui/: __init__.py  action_dispatch.py  action_prompt_choices.py  action_prompt_menu.py  again_action.py  asset_menu.py  batch_menu.py  cli_escape.py  current_change.py  display.py  file_review.py  file_selection_menu.py  fixup_menu.py  flow.py  flow_actions.py  flow_menu.py  help_display.py  history_actions.py  hunk_actions.py  interactive.py  line_selection_menu.py  prompts.py  session_quit.py  session_startup.py  shell_command.py  status_action.py
src/git_stage_batch/utils/: __init__.py  command.py  command_events.py  command_streaming.py  file_io.py  file_job_process.py  file_job_transport.py  file_job_workspace.py  file_jobs.py  file_patterns.py  git.py  git_command.py  git_environment.py  git_index.py  git_index_lock.py  git_object_io.py  git_refs.py  git_repository.py  git_worktree.py  journal.py  mapped_storage.py  paths.py  repository_buffers.py  repository_path.py  session_lock.py  session_start_point.py  text.py
(+601 files in other folders)
